# ml-training-serving-pipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
docs/: azure_setup.md
examples/: __init__.py  end_to_end_demo.py
serving/: __init__.py  app.py  model_loader.py
shared/: __init__.py
shared/config/: __init__.py  azure_config.py  serving_config.py  training_config.py
shared/utils/: __init__.py  data_processing.py  logging_utils.py
tests/: __init__.py  conftest.py  test_config.py  test_data_processing.py  test_model.py  test_model_loader.py
training/: __init__.py  train_dlrm.py
training/azure_integration/: __init__.py  submit_job.py
